--- a/index.html
+++ b/index.html
@@ -11,27 +11,47 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Frontend Mentor | Profile card component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
-    Isaiah Nkemboh 21 Yaounde 80K Followers 803K Likes 1.4K Photos
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+    <div class="container">
+      <div class="everything">
+        <img src="./images/bg-pattern-card.svg" alt="" />
+        <div class="profile">
+          <img src="./profile_pic.jpg" alt="profile picture" />
+          <h2 class="name">Isaiah Nkemboh <span>21</span></h2>
+          <p>Yaounde</p>
+        </div>
+        <div class="end">
+          <div>
+            <h2>80K</h2>
+            <p>Followers</p>
+          </div>
+          <div>
+            <h2>803K</h2>
+            <p>Likes</p>
+          </div>
+          <div>
+            <h2>1.4K</h2>
+            <p>Photos</p>
+          </div>
+        </div>
+      </div>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://twitter.com/IsaiahNkemboh">Isaiah Nkemboh</a>.
+      </div>
     </div>
   </body>
 </html>
